# glin

./: .agent_env_setup.sh  .agent_envsetup_exec.sh  .agent_envsetup_exec2.sh  .agent_temp_env_setup.sh  .gitignore  404.html  AGENTS.md  Dockerfile  Makefile  README.md  glin-init.sh  glin.toml  index.html  init.sh  install_env.sh  main.py  mkdocs.yml  objects.inv  pyproject.toml  seev-init.sh  sitemap.xml  test_client.py
.claude/: worklog_improvement_analysis.md
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.junie/: Roadmap.md  guidelines.md  phase-0-issue.md  phase-1-issue.md  phase-2-issue.md  phase-3-issue.md  phase-4-issue.md  phase-5-issue.md  phase-6-issue.md  phase-7-issue.md  phase-8-issue.md
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  index.md  privacy-and-data.md  troubleshooting.md
glin/: __init__.py  config.py  conversation_tools.py  git_tools.py  markdown_tools.py  mcp_app.py  prompts.py  scaffold_tools.py  worklog_generator.py
guides/: index.html
js/: analytics.plausible.js
privacy-and-data/: index.html
reference/: index.html
search/: search_index.json
seev/: __init__.py  config.py  conversation_tools.py  markdown_tools.py  mcp_app.py  prompts.py  scaffold_tools.py  worklog_generator.py
tests/: test_config.py  test_git_analysis_conventional_types.py  test_git_branches.py  test_git_enrichment.py  test_git_remotes.py  test_git_tools.py  test_integration_flags.py  test_markdown_tools.py  test_mcp_app.py  test_prompts.py  test_scaffold_tools.py  test_storage_backup_status.py  test_storage_commits.py  test_storage_conversation_summaries.py  test_storage_conversations.py  test_storage_conversations_query.py  test_storage_db.py
(+79 files in other folders)
